# dance-deck

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  angular.json  create_sample_library.js  eslint.config.js  package.json
src/: data-transfer-objects.ts  main.ts  styles.css
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2025-01-30-143445_initial/: down.sql  up.sql
src-tauri/migrations/2025-01-30-180851_initial/: down.sql  up.sql
src-tauri/migrations/2025-01-30-190110_initial/: down.sql  up.sql
src-tauri/migrations/2025-01-31-144842_track_library_tables/: down.sql  up.sql
src-tauri/migrations/2025-03-08-183118_create_categories/: down.sql  up.sql
src-tauri/migrations/2025-03-08-183118_initial_schema/: down.sql  up.sql
src-tauri/migrations/2025-03-16-205945_create_dances/: down.sql  up.sql
src-tauri/src/: category.rs  data.rs  error.rs  global.rs  lib.rs  main.rs  migration.rs  schema.rs  setup.rs
src-tauri/src/categories/: commands.rs  data.rs  mod.rs  tree.rs
src-tauri/src/dances/: commands.rs  data.rs  mod.rs
src-tauri/src/data/: library.rs  mod.rs  setup.rs  tracks.rs
src/app/: app.component.html  app.component.ts  app.routes.ts  database.service.ts
src/app/application-settings-page/: application-settings-page.component.html  application-settings-page.component.ts
src/app/back-to-track-playback-button/: back-to-track-playback-button.component.html  back-to-track-playback-button.component.ts
src/app/category-manage-page/: category-manage-page.component.html  (+4 more)
(+72 files in other folders)
